# ba

./: .gitignore  README.md  upload_to_redpitaya.sh
firmware/fpga/: signal_decoder.v  vivado_pid10892.str  vivado_pid18420.str
firmware/fpga/tmp/cores/: axi_bram_reader.xpr  axi_cfg_register.xpr  axis_averager.xpr  axis_constant.xpr  axis_red_pitaya_adc.xpr  axis_red_pitaya_dac.xpr  bram_switch.xpr
firmware/fpga/tmp/cores/axi_bram_reader_v1_0/: component.xml
firmware/fpga/tmp/cores/axi_cfg_register_v1_0/: component.xml
firmware/fpga/tmp/cores/axis_averager_v1_0/: component.xml
firmware/fpga/tmp/freq/: freq.xpr  hs_err_pid18636.dmp  vivado.jou  vivado_10848.backup.jou  vivado_17648.backup.jou  vivado_18252.backup.jou  vivado_18800.backup.jou  vivado_19260.backup.jou  vivado_20076.backup.jou  vivado_20824.backup.jou  vivado_21896.backup.jou  vivado_3672.backup.jou  vivado_6176.backup.jou  vivado_6264.backup.jou  vivado_6268.backup.jou  vivado_7892.backup.jou  vivado_8308.backup.jou  vivado_9652.backup.jou  vivado_pid10848.str  vivado_pid14864.str  vivado_pid18252.str  vivado_pid18636.str  vivado_pid20076.str  vivado_pid20824.str  vivado_pid21896.str  vivado_pid3672.str  vivado_pid6264.str  vivado_pid6268.str  vivado_pid8024.str  vivado_pid9652.str
firmware/portentaH7/dac_test/: dac_test.ino
firmware/project/: redpitaya.xpr  vivado.jou  vivado_3020.backup.jou  vivado_pid3020.str
firmware/project/redpitaya.cache/wt/: webtalk_pa.xml
firmware/redmem/: Cargo.toml  build.nu
firmware/redmem/src/: main.rs
firmware/redpitaya/: Cargo.toml  build.nu
firmware/redpitaya/.cargo/: config.toml
firmware/redpitaya/src/: main.rs
firmware/redpitaya/static/: index.html
firmware/smartknob/: Cargo.toml  README.md
firmware/smartknob/.helix/: languages.toml
firmware/smartknob/src/: config.rs  lcd.rs  led_ring.rs  lib.rs  old_foc.rs  old_pid.rs  pid.rs  util.rs
firmware/smartknob/src/bldc/: driver.rs  mod.rs  motor.rs
firmware/smartknob/src/foc/: mod.rs  trap_maps.rs
firmware/smartknob/src/led_ring/: mod.rs  rgb8.rs  sk6805.rs
firmware/smartknob/src/motor/: driver.rs  foc.rs  mod.rs  mt6701.rs
firmware/smartknob/src/sensor/: strain.rs
firmware/smartknob/src/tasks/: led_ring.rs  mod.rs  motor.rs  motor_angle.rs  strain_gauge.rs
firmware/smartknob_old/src/: lcd.rs
firmware/synthesizer/: Cargo.toml  Embed.toml  build.rs
firmware/synthesizer/.cargo/: config.toml
firmware/synthesizer/src/: main.rs
hardware/: BOM.md
hardware/amplifier/: amplifier.kicad_pcb  amplifier.kicad_prl  amplifier.kicad_pro  amplifier.kicad_sch  fp-info-cache
hardware/cad/: back_plate_v49.3mf  front_panel_v81 (v1~recovered).stl  front_panel_v81.3mf  groud_plate v42.step  groud_plate.f3d  printing.3mf
hardware/electronics/view_base/: fp-info-cache  fp-lib-table  view_base.kicad_pcb  view_base.kicad_prl  view_base.kicad_pro  view_base.kicad_sch
hardware/electronics/view_base/jlcpcb/: project.db
hardware/electronics/view_screen/: view_screen.kicad_pcb  view_screen.kicad_prl  view_screen.kicad_pro
hardware/electronics/view_screen/jlcpcb/: project.db
hardware/synthesizer/: #auto_saved_files#  clocks.kicad_sch  coxial_conn.kicad_sch  eth_jack.kicad_sch  ethzurich.kicad_sym  fp-info-cache  microcontroller.kicad_sch  power.kicad_sch  screw_holes.kicad_sch  synthesizer.kicad_pcb  synthesizer.kicad_prl  synthesizer.kicad_pro  synthesizer.kicad_sch  usb.kicad_sch  ~synthesizer.kicad_pcb.lck  ~synthesizer.kicad_sch.lck
progress_reports/cw10/: slides.pptx
progress_reports/cw13/: slides.pptx
progress_reports/cw8/: report.typ  slides.pptx
progress_reports/cw8/res/: sources.yml
progress_reports/cw9/: report.typ  slides.pptx
progress_reports/cw9/dac_test2/: dac_test2.ino
software/commanderCody/: commanderCody.sln
software/commanderCody/commanderCody/: Program.cs  commanderCody.csproj
software/hub/: Cargo.toml  README.md
software/hub/src/: main.rs
software/hub/src/pressure_api/: mod.rs
(+653 files in other folders)
