[package]
name = "redpitaya"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
memmap2 = "0.9.5"
postcard = { version = "1.1.1", features = ["use-std"] }
rand = "0.9.1"
rand_distr = "0.5.1"
serde-big-array = "0.5.1"
axum = { version = "0.8.4", features = ["json", "ws"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tower = { version = "0.5.2", features = ["util"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
