[package]
edition = "2021"
name    = "smartknob"
version = "0.1.0"

[[bin]]
name = "smartknob"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
libm = "0.2.15"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
